<resources>
    <string name="app_name">NoteApp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="or">Or</string>
    <string name="unknown_user">Unknown user</string>
    <string name="create_an_account">Create an account</string>
    <string name="user_register">User registration</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="register_is_success">Registration successful</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="password_is_not_confirmed">Password is not confirmed</string>
    <string name="email_adress_is_not_valid">Email address is not valid</string>
    <string name="minimum_password_length_6_characters">Minimum password length: 6 characters</string>
    <string name="log_out">Log Out</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="note_title">Note Title</string>
    <string name="creating_new_note">Creating a new note</string>
    <string name="text">Text</string>
    <string name="save">Save</string>
    <string name="someDataIsEmpty">Not all values are entered</string>
    <string name="savingIsSuccess">Data saved successfully</string>
    <string name="fields_dont_must_be_empty">Fields must not be empty</string>
    <string name="search">Search</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="unknown_screenmode">unknown screenMode</string>
    <string name="editing_a_note">editing a note</string>

</resources>