<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingHorizontal="16dp"
    tools:context=".presentation.fragments.createNote.CreateNoteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="16dp"
            android:text="@string/creating_new_note"
            android:textSize="36sp" />

        <EditText
            android:id="@+id/title_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note_title"
            android:textSize="22sp"
            android:ellipsize="end"
            android:imeOptions="actionNext|flagNoExtractUi"
            android:maxLines="1"
            android:singleLine="true"
            android:maxLength="20"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <EditText
                android:id="@+id/contentEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:hint="@string/text"
                android:imeOptions="actionDone|flagNoEnterAction|flagNoExtractUi"
                android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
                android:textSize="20sp"/>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/btn_black_bg"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>