<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="presentation.fragments.auth.signUp.SignUpFragment"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:paddingVertical="70dp"
    android:paddingHorizontal="40dp"
    >

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="start"
        android:src="@drawable/ic_back"
        android:background="@color/background"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_register"
            android:textSize="28sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:layout_gravity="start"
            android:layout_marginTop="24dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:boxStrokeColor="@color/black"
            app:hintEnabled="false"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:autofillHints="emailAddress"
                android:maxLines="1"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:layout_gravity="start"
            android:layout_marginTop="24dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:hint="@string/password"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:layout_gravity="start"
            android:layout_marginTop="24dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLines="1"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/register"
            android:backgroundTint="@color/btn_black_bg"
            android:textColor="@color/white"
            />

</LinearLayout>